[package]
name = "pcf_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
owo-colors = "4.2.2"          # coloured output (optional)
anyhow = "1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
ratatui     = "0.26"   # tui-rs fork
crossterm   = "0.27"